// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/FAB Extended Variant 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-752 MuiFab-extended MuiFab-primary NatDSFab-primary-753"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    Extended (with text)
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/FAB Large Size 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-755 MuiFab-primary NatDSFab-primary-756"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-758 NatDSIcon-smallFontSize-761"
    >
      outlined-action-add
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/FAB Leading Icon 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-812 MuiFab-extended MuiFab-primary NatDSFab-primary-813"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-815 NatDSIcon-smallFontSize-818"
    >
      outlined-action-add
    </i>
     Icon and text
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/FAB Light Color 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-714"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-717 NatDSIcon-smallFontSize-720"
    >
      outlined-action-add
    </i>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/FAB Medium Size 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-774 MuiFab-sizeMedium MuiFab-primary NatDSFab-primary-775"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-777 NatDSIcon-smallFontSize-780"
    >
      outlined-action-add
    </i>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/FAB Playground 1`] = `
<span
  className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
  style={
    Object {
      "height": "",
      "width": "",
    }
  }
/>
`;

exports[`Storyshots Components/FAB Primary Color 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-676 MuiFab-primary NatDSFab-primary-677"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-679 NatDSIcon-smallFontSize-682"
    >
      outlined-action-add
    </i>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/FAB Round Variant 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-733 MuiFab-primary NatDSFab-primary-734"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-736 NatDSIcon-smallFontSize-739"
    >
      outlined-action-add
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/FAB Secondary Color 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-695 MuiFab-secondary NatDSFab-secondary-697"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-698 NatDSIcon-smallFontSize-701"
    >
      outlined-action-add
    </i>
  </span>
</button>
`;

exports[`Storyshots Components/FAB Small Size 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-793 MuiFab-sizeSmall MuiFab-primary NatDSFab-primary-794"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-796 NatDSIcon-smallFontSize-799"
    >
      outlined-action-add
    </i>
  </span>
</button>
`;
